TracePageSizes output reports wrong page size on Windows with G1

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P5
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • gc
    • b64

        Sometimes the test in gc/g1/TestLargePageUseForAuxMemory fails because the output with -XX:+TracePageSizes reports a page size of 64k (= allocation granularity).

        This makes that test fail, failing jprt.

        Cause for this problem has been some wrong refactoring.

              Assignee:
              Thomas Schatzl
              Reporter:
              Thomas Schatzl
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: