8077255: TracePageSizes output reports wrong page size on Windows with G1

Print selected page size, not alignment size chosen by ReservedSpace (which is the vm_allocation_granularity that is different to page size on Windows) in the message presented by TracePageSizes.

Reviewed-by: drwhite, jmasa